Don't use "new Boolean" when Boolean.valueOf reuses cached instances
Signed-off-by: Shawn O. Pearce <spearce@spearce.org>